# zisrust

./: Cargo.toml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
db/: Cargo.toml
db/src/: error.rs  lib.rs
iobase/: Cargo.toml
iobase/src/: basic.rs  blockbuf.rs  lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: db.rs  io.rs  lib.rs  pyramid.rs  utils.rs
src/io/: basic.rs  blockbuf.rs  zisraw.rs  zisraw_impl.rs
src/io/zisraw/: impl.rs  segment.rs  zisraw_impl.rs  zisraw_structs.rs
zisraw/: Cargo.toml
zisraw/src/: lib.rs  segment.rs  structs.rs  utils.rs
