[package]
name = "zisrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "1.1.2"
memmap = "0.7.0"
xmltree = "0.10.3"
ndarray = "0.15.6"
chrono = "0.4.22"
uom = "0.33.0"
euclid = "0.22.7"
num-complex = "0.4.2"
rusqlite = {version="0.28.0", optional=true}
clap = {version="3.2.17", optional=true, features=["cargo", "color"]}

[features]
database = ["rusqlite"]

[[bin]]
name = "zisraw-srv"
required-features = ["database", "clap"]
