[package]
name = "zisrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "1.1.2"
xmltree = "0.10.3"
ndarray = "0.15.6"
chrono = "0.4.22"
uom = "0.33.0"
euclid = "0.22.7"
num-complex = "0.4.2"
rusqlite = "0.28.0"
argh = "0.1.8"

