[package]
name = "zisrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.28.0", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.1.2", features = ["serde"]}
chrono = { version = "0.4.22", features = ["serde"] }
xmltree = "0.10.3"
ndarray = "0.15.6"
uom = "0.33.0"
euclid = "0.22.7"
num-complex = "0.4.2"
argh = "0.1.8"
prettytable-rs = "0.9.0"
serde_json = "1.0.85"
axum = "0.5.15"
axum-macros = "0.2.3"
