[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zisraw = {path = "../zisraw"}
iobase = {path = "../iobase"}
db = {path = "../db"}
prettytable-rs = "0.9.0"
serde_json = "1.0.85"
chrono = "0.4.22"
argh = "0.1.8"
