[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zisraw = {path = "../zisraw"}
iobase = {path = "../iobase"}
db = {path = "../db"}
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.28.0", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
axum = "0.5.15"
axum-macros = "0.2.3"
argh = "0.1.8"
uuid = "1.1.2"
